// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component The component only opens the last section when multiple sections have been clicked. 1`] = `
<div>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="3"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
     
  </ul>
  <p>
    <div
      className="content"
    >
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </div>
  </p>
</div>
`;

exports[`Accordion Component The component opens a clicked section. 1`] = `
<div>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="3"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
     
  </ul>
  <p>
    <div
      className="content"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </div>
  </p>
</div>
`;

exports[`Accordion Component The component renders an empty li when the sections prop is not supplied. 1`] = `
<div>
  <ul>
    <li />
  </ul>
</div>
`;

exports[`Accordion Component The component renders no sections as active by default 1`] = `
<div>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="3"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
     
  </ul>
  <p />
</div>
`;
